# dbt-gdpr-anonymizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
config/: logger.py  settings.py
css/: style.css
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/macros/: anonymize_coordinates.sql  anonymize_email.sql  anonymize_phone.sql  generate_pii_report.sql
dbt_project/macros/privacy/: mask_columns.sql  mask_coordinates.sql  mask_email.sql  mask_model.sql  mask_phone.sql
dbt_project/models/marts/: mart_services_open_data.sql
dbt_project/models/staging/: schema.yml  stg_services_publics.sql
dbt_project/tests/: assert_no_pii_in_marts.sql
src/dbt_gdpr_anonymizer/config/: logger.py  settings.py
src/dbt_gdpr_anonymizer/scripts/: download_data.py  export_pii_report.py  validate_anonymization.py
